--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <button class="btn btn-primary btn-lg mr-2" (click)="toggleMode()">
       Register
     </button>
-    <button class="btn btn-primary btn-lg">Learn more</button>
+    <button class="btn btn-secondary btn-lg">Learn more</button>
   </div>
 </div>
 
