--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -2,7 +2,6 @@
   <div class="card-img-wrapper">
     <img
       src="{{ user.photoUrl }}"
-      alt="{{ user.knownAs }}"
       class="card-img-top"
     />
     <ul class="list-inline member-icons animate text-center">
@@ -25,7 +24,7 @@
   </div>
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
-      <i class="fa fa-user"> {{ user.knownAs }}, {{ user.age }} </i>
+      <i class="fa fa-user"> {{ user.knownAs | titlecase }}, {{ user.age }} </i>
     </h6>
     <p class="card-text text-muted text-center">
       {{ user.city }}
