adding edit profile feature

--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -48,7 +48,15 @@
             <p>{{ user.interests }}</p>
           </tab>
           <tab heading="Photos">
-            <p>Photos will go here</p>
+            <carousel>
+              <slide *ngFor="let photo of user.photos">
+                <img
+                  src="{{ photo.url }}"
+                  alt="{{ photo.description }}"
+                  style="display: block; width: 100%;"
+                />
+              </slide>
+            </carousel>
           </tab>
           <tab heading="Messages">
             <p>Messages will go here</p>
