--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -87,7 +87,7 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>TODO</p>
+            <app-photo-editor [photos]="user.photos" (mainPhotoSet)="mainPhotoSet($event)"></app-photo-editor>
           </tab>
         </tabset>
       </div>
