--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -11,7 +11,7 @@
       >
         Main
       </button>
-      <button class="btn btn-sm btn-danger">
+      <button class="btn btn-sm btn-danger" (click)="deletePhoto(photo)" [disabled]="photo.isMain">
         <i class="fa fa-trash-o"></i>
       </button>
     </div>
